# simple_soil

./: README.md  pyproject.toml  setup.py
notebooks/: Execute-base.ipynb  Execute.ipynb  Fill_control_column.ipynb  FractionFunctions.ipynb  Green-Ampt-test.ipynb  Infiltration.ipynb  SaturationFunctions.ipynb
notebooks/data/: hru_1_infil.csv  hru_1_potet.csv  hru_1_rain.csv
notebooks/data/hru_1/: dprst_evap_hru.csv  hru_impervevap.csv  hru_intcpevap.csv  hru_rain.csv  hru_sroffi.csv  hru_sroffp.csv  potet.csv  snow_evap.csv  snowmelt.csv
simple_soil/: __init__.py
simple_soil/base/: __init__.py  control_volume.py
simple_soil/utils/: __init__.py  array_utils.py  flow_functions.py  fraction_functions.py  infiltration_functions.py  newton_raphson.py  saturation.py  smoothing.py
