[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "simple_soil"
description = "simple_soil"
authors = [
    {name = "simple_soil Team", email = "modflow@usgs.gov"},
]
maintainers = [
    {name = "Joseph D. Hughes", email = "jdhughes@usgs.gov"},
]
keywords = ["groundwater", "hydrogeology"]
license = {text = "CC0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.15.0",
    "matplotlib >=1.4.0",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
lint = [
    "black",
    "cffconvert",
    "flake8",
    "isort",
    "pylint",
]
test = [
    "simple_soil[lint]",
    "coverage",
    "flaky",
    "filelock",
    "jupyter",
    "jupytext",
    "modflow-devtools",
    "pytest",
    "pytest-benchmark",
    "pytest-cases",
    "pytest-cov",
    "pytest-dotenv",
    "pytest-virtualenv",
    "pytest-xdist",
    "virtualenv"
]
optional = [
    "netcdf4",
    "python-dateutil >=2.4.0",
]
doc = [
    "simple_soil[optional]",
    "ipython[kernel]",
    "jupytext",
    "nbsphinx",
    "nbsphinx-link",
    "pydata-sphinx-theme",
    "PyYAML",
    "recommonmark",
    "rtds-action",
    "sphinx >=4",
    "sphinx-rtd-theme >=1",
]

[project.urls]
Documentation = "https://flopy.readthedocs.io"
"Release Notes" = "https://github.com/modflowpy/flopy/blob/develop/docs/version_changes.md"
"Bug Tracker" = "https://github.com/modflowpy/flopy/issues"
"Source Code" = "https://github.com/modflowpy/flopy"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "simple_soil.version.__version__"}
readme = {file = ["README.md", "LICENSE.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["simple_soil", "simple_soil.*"]

[tool.black]
line-length = 79
target_version = ["py38"]

[tool.isort]
profile = "black"
src_paths = ["simple_soil", "autotest"]
line_length = 79
